src/test/deca/context/invalid/homemade/tests/test329_condition/test329_condition4.deca
// test invalide de la règle 3.29


{
    if (-5.5) {
        ;
    }
}
